--- a/frontend/src/app/connections/connections.html
+++ b/frontend/src/app/connections/connections.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <input type="number" class="form-control" placeholder="Ilość" ng-model="vm.numberProductToAdd" />
+                            <input type="number" class="form-control" placeholder="Magazyn" ng-model="vm.numberProductToAdd" />
                         </div>
                     </div>
                     <br/>
